My Blockchain page

--- a/xyz.html
+++ b/xyz.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Blockchain Transaction Viewer</title>
-  <link rel="stylesheet" type="text/css" href="bc.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <h1>Blockchain Transaction Viewer</h1>
@@ -27,6 +27,6 @@
     <ul id="blockchain-list"></ul>
   </div>
 
-  <script src="bc.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
